# chip-eat

./: CMakeLists.txt
include/: app.h  chip.h  common.h  timers.h
src/: app.c  chip.c  main.c  timers.c
